@@ -14,6 +14,7 @@ import io.moquette.persistence.MemorySessionStore;
 import io.moquette.spi.impl.Qos1PublishHandler;
 import io.netty.buffer.ByteBuf;
 import cn.wildfirechat.common.ErrorCode;
+import win.liyufan.im.I18n;
 import win.liyufan.im.IMTopic;
 import win.liyufan.im.MessageShardingUtil;
 
@@ -35,7 +36,10 @@ public class HandleFriendRequestHandler extends IMHandler<WFCMessage.HandleFrien
                 builder.setServerTimestamp(timestamp);
                 saveAndPublish(request.getTargetUid(), null, builder.build(), false);
 
-                WFCMessage.MessageContent.Builder contentBuilder = WFCMessage.MessageContent.newBuilder().setType(90).setContent("以上是打招呼信息");
+                MemorySessionStore.Session session = m_sessionsStore.getSession(clientID);
+
+                WFCMessage.MessageContent.Builder contentBuilder = WFCMessage.MessageContent.newBuilder().setType(90).setContent(I18n.getString(session.getLanguage(), "Above_Greeting_Message"));
+                
                 builder = WFCMessage.Message.newBuilder();
                 builder.setFromUser(request.getTargetUid());
                 builder.setConversation(WFCMessage.Conversation.newBuilder().setTarget(fromUser).setLine(0).setType(ProtoConstants.ConversationType.ConversationType_Private).build());
@@ -47,12 +51,7 @@ public class HandleFriendRequestHandler extends IMHandler<WFCMessage.HandleFrien
                 builder.setMessageId(messageId);
                 saveAndPublish(request.getTargetUid(), null, builder.build(), false);
 
-                MemorySessionStore.Session session = m_sessionsStore.getSession(clientID);
-                if (session != null && session.getLanguage() != null && session.getLanguage().toLowerCase().contains("en")) {
-                    contentBuilder.setContent("This's the greeting");
-                } else {
-                    contentBuilder.setContent("你们已经成为好友了，现在可以开始聊天了");
-                }
+                contentBuilder.setContent(I18n.getString(session.getLanguage(), "Friend_Can_Start_Chat"));
                 builder.setContent(contentBuilder);
                 messageId = MessageShardingUtil.generateId();
                 builder.setMessageId(messageId);
